--- a/_config.yml
+++ b/_config.yml
@@ -13,41 +13,36 @@ baseurl: ''
 lang: en
 
 # Change to your timezone › http://www.timezoneconverter.com/cgi-bin/findzone/findzone
-timezone: Asia/Shanghai
+timezone: America/Los_Angeles
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Blog                          # the main title
+title: App Dev                          # the main title
 
-tagline: A text-focused Jekyll theme   # it will display as the sub-title
+tagline: Learn Swift and SwiftUI   # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
-  A minimal, portfolio, sidebar,
-  bootstrap Jekyll theme with responsive web design
-  and focuses on text presentation.
+  Learn app development with Swift and SwiftUI.
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
 url: ''
 
 github:
-  username: github_username             # change to your github username
+  username: aheze             # change to your github username
 
 twitter:
-  username: twitter_username            # change to your twitter username
+  username: aheze0            # change to your twitter username
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@doamin.com             # change to your email address
+  name: Andrew Zheng
+  email: aheze@getfind.app             # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username      # change to your twitter homepage
-    - https://github.com/username       # change to your github homepage
-    # Uncomment below to add more social links
-    # - https://www.facebook.com/username
-    # - https://www.linkedin.com/in/username
+    - https://github.com/aheze       # change to your github homepage
+    - https://twitter.com/aheze0      # change to your twitter homepage
 
 google_site_verification: google_meta_tag_verification # change to your verification string
 
@@ -83,6 +78,7 @@ img_cdn:
 
 # the avatar on sidebar, support local or CORS resources
 avatar:
+  assets/img/Logo.png
 
 # boolean type, the global switch for ToC in posts.
 toc: true
