--- a/_config.yml
+++ b/_config.yml
@@ -168,6 +168,6 @@ jekyll-archives:
     tag: tag
   permalinks:
     tag: /tags/:name/
-    category: /categories/:name/
+    category: /tutorials/:name/
 
 
